<resources>
    <string name="app_name">Edvora</string>
    <string name="placement_text">Sample Text</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rides">Rides:</string>
    <string name="ride_id">Ride Id:</string>
    <string name="origin_station">Origin Station:</string>
    <string name="station_path">Station Path:</string>
    <string name="date">Date:</string>
    <string name="distance">Distance:</string>
</resources>