<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:paddingEnd="25sp"
        android:paddingStart="25sp"
        android:background="@color/taskbar_color">
        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            style="@style/textHeading"
            android:textSize="30sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="center">

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textHeading"
                android:text="@string/placement_text"
                android:textSize="17sp"
                android:layout_marginEnd="10sp"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImage"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:src="@color/white"/>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:paddingEnd="15sp"
        android:paddingStart="25sp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textSecondary"
            android:text="@string/rides"
            android:textSize="11sp" />
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/background"
            app:tabInlineLabel="true"
            app:tabTextColor="@color/textSecondary"
            app:tabIndicatorColor="@color/textPrimary"
            app:tabSelectedTextColor="@color/white"
            app:tabTextAppearance="@style/tab_text"
            android:layout_marginStart="10sp"/>

    </LinearLayout>




    <androidx.viewpager2.widget.ViewPager2
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/view_Pager"/>



</LinearLayout>